# rubby

./: .gitignore  Cargo.toml  LICENSE  README.md
ai/: Cargo.toml
ai/src/: lib.rs  lib.rs.backup  main.rs  qwen_prompt.txt  qwen_prompt.txt.original  system_prompt.txt
client/: package-lock.json
client/src/: main.ts  styles.css
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
docs/: GRADING_CHECKLIST.md  backlog.md  capstone-proposal.md  cost-model.md  evaluation-plan.md  feature-roadmap.md  setup.md  team-contract.md  team-health.md
docs/week10/: safety-evaluation-audit.md
docs/week5/: functions-spec.md  prd-full.md  pydantic-models.py  rag-strategy.md
docs/week6/: ai_use_log.md  evaluation-notes.md  implementation-status.md  safety-checklist.md
docs/week7/: GRADING_CHECKLIST.md  capstone-link.md  desing-review-week7.md  event-schemas.md
docs/week9/: optimization-report.md
frontend/: .env.example  index.html  package.json
frontend/public/: chat-bubble.html  chat-bubble.js
frontend/rubby/: index.html  package.json
frontend/rubby/src/: main.ts  styles.css
frontend/rubby/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/: AIFunctions.ts  chatBubble.ts  duck.ts  main.ts  speechRecognition.ts  styles.css  voiceRecorder.ts
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: groq.rs  lib.rs  main.rs
server/: index.js  package-lock.json  package.json
tests/: USAGE.md  compare-metrics.ts  evaluation.ts  golden_set.json  package.json  regression-test.ts
(+6 files in other folders)
