[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai"
path = "src/lib.rs"

[dependencies]
openai-api-rs = "6.0.11"   # used for ChatCompletionMessage/Content/MessageRole types
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"